[gd_scene load_steps=15 format=2]

[ext_resource path="res://pieces/content_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/pieces/text_Popup.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.968627, 0.105882, 0.635294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.0862745 )
border_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20
expand_margin_right = 6.0
expand_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.0862745 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/JosefinSans-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=7]
use_mipmaps = true
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.972549, 0.356863, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=9]
content_margin_top = 5.0
bg_color = Color( 0.96875, 0.261108, 0.698825, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.968627, 0.243137, 0.690196, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=12]
size = 18
use_mipmaps = true
use_filter = true
font_data = SubResource( 11 )

[node name="text_Popup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.5
margin_top = -59.5
margin_right = 278.5
margin_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="shadow" type="Panel" parent="Panel"]
show_behind_parent = true
margin_right = 557.0
margin_bottom = 138.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 557.0
margin_bottom = 138.0
custom_constants/separation = 12

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
margin_right = 557.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="Panel/VBoxContainer/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -8.5
margin_right = 39.0
margin_bottom = 10.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "Warning!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer" type="Control" parent="Panel/VBoxContainer"]
margin_top = 39.0
margin_right = 557.0
margin_bottom = 39.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 51.0
margin_right = 557.0
margin_bottom = 70.0
alignment = 1

[node name="response_text" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 528.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "text here"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer2" type="Control" parent="Panel/VBoxContainer"]
margin_top = 82.0
margin_right = 557.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 95.0
margin_right = 557.0
margin_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yes_button" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 173.0
margin_right = 273.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "YES"
my_url = "true"

[node name="no_button" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 283.0
margin_right = 383.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
text = "NO"
my_url = "false"

[node name="spacer3" type="Control" parent="Panel/VBoxContainer"]
margin_top = 133.0
margin_right = 557.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 5 )
[connection signal="menu_button_pressed" from="Panel/VBoxContainer/HBoxContainer/yes_button" to="." method="_on_yes_button_menu_button_pressed"]
[connection signal="menu_button_pressed" from="Panel/VBoxContainer/HBoxContainer/no_button" to="." method="_on_no_button_menu_button_pressed"]
